--- a/analise_dados_energia_colab.ipynb
+++ b/analise_dados_energia_colab.ipynb
@@ -164,6 +164,12 @@
     }
    ],
    "source": [
+    "#1TDSPF\n",
+    "\n",
+    "# João Vitor Broggine Lopes 557129\n",
+    "# João Vitor Rocha Cândido 554727\n",
+    "# Lavinia Soo Hyun Park 555679\n",
+    "\n",
     "# Importar bibliotecas\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
